--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi"
   >
     <title>Nahid Hasan Sulaiman</title>
-    <link rel="icon" type="image/png" href="images/logo.png" >
+    <link rel="icon" type="image/png" href="images/about_1.png" >
     <link rel="stylesheet" href="css/font-awesome-pro.css" >
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <link rel="stylesheet" href="css/scroll_button.css" >
@@ -33,7 +33,7 @@
       </span>
 
       <a class="logo_2" href="index.html">
-        <img src="images/logo2.png" alt="Suhan" class="img-fluid w-100">
+        <img src="images/logo.png" alt="Nahid" class="img-fluid w-100">
       </a>
 
       <ul id="list-example" class="list-group">
