--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                   <p>
                     Mirpur 11, Dhaka 
                   </p>
-                  <a href="#">View on map</a>
+                  <a href="https://www.google.com/maps/@23.8216165,90.3654296,14z?entry=ttu" target="_blank">View on map</a>
                 </div>
               </div>
               <div class="col-xl-4 col-md-6 col-lg-4">
