--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="tf__section_heading mb_40">
                   <h5 class="has-animation">ABOUT Me</h5>
                   <h2 class="has-animation">
-                    Code that breathes life into pixels. Apps that change the game.
+                    Let me turn your thoughts into visualization!
                   </h2>
                 </div>
               </div>
