--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                       <!-- ANIMATE TEXT VALUES: zoom, rotate-1, letters type, letters rotate-2, loading-bar, slide, clip, letters rotate-3, letters scale, push,  -->
                       <span class="cd-words-wrapper">
                         <b class="is-visible">Video Editor</b>
-                        <b>Motion Designer</b>
+                        <b>Motion </br> Designer</b>
                         <b>3D Editor</b>
                       </span>
                     </span>
