--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                       <span class="cd-words-wrapper">
                         <b class="is-visible">Video Editor</b>
                         <b>Motion </br> Designer</b>
-                        <b>3D </br> Editor</b>
+                        <b>3D Reels </br> Editor</b>
                       </span>
                     </span>
                   </h1>
